tests/roxctl/bats-tests/test-data/np-guard/demo-app-with-routes-and-ingress/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: helloworld
spec:
  rules:
  - host: hello.nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 8000
