tests/roxctl/bats-tests/test-data/np-guard/demo-app-with-routes-and-ingress/hello-world-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
  namespace: helloworld
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: hello-world
    weight: 100
