tests/roxctl/bats-tests/test-data/np-guard/demo-app-with-routes-and-ingress/ingress-world-deployment-and-service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingressworld
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-world
  namespace: ingressworld
  labels:
    app: ingress-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-world
  template:
    metadata:
      labels:
        app: ingress-world
    spec:
      containers:
      - name: ingressworld
        image: quay.io/shfa/ingress-world:latest
        ports:
        - containerPort: 8090
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-world
  namespace: ingressworld
spec:
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  selector:
    app: ingress-world
